--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,8 +1,19 @@
 [package]
-org = "ayeshalmeida"
+distribution = "2201.10.0"
+org = "ballerinax"
 name = "aws.secretmanager"
 version = "0.1.0"
-distribution = "2201.10.0"
+license= ["Apache-2.0"]
+authors = ["Ballerina"]
+keywords = ["AWS", "Secret Manager", "Cloud/Subscriptions"]
+icon = "icon.png"
+repository = "https://github.com/ballerina-platform/module-ballerinax-aws.secretmanager"
 
-[build-options]
-observabilityIncluded = true
+[platform.java17]
+graalvmCompatible = true
+
+[[platform.java17.dependency]]
+groupId = "io.ballerina.lib"
+artifactId = "aws.secretmanager-native"
+version = "0.1.0-SNAPSHOT"
+path = "../native/build/libs/aws.secretmanager-native-0.1.0-SNAPSHOT.jar"
