--- a/native/build.gradle
+++ b/native/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     implementation group: 'org.ballerinalang', name: 'ballerina-lang', version: "${ballerinaLangVersion}"
     implementation group: 'org.ballerinalang', name: 'value', version: "${ballerinaLangVersion}"
     implementation group: 'io.ballerina.stdlib', name: 'time-native', version: "${stdlibTimeVersion}"
-    implementation group: 'software.amazon.awssdk', name: 'awsSecretManagerSdkVersion', version: "${awsMpEntitlementSdkVersion}"
+    implementation group: 'software.amazon.awssdk', name: 'secretsmanager', version: "${awsSecretManagerSdkVersion}"
 
-    dist group: 'software.amazon.awssdk', name: 'awsSecretManagerSdkVersion', version: "${awsMpEntitlementSdkVersion}"
+    dist group: 'software.amazon.awssdk', name: 'secretsmanager', version: "${awsSecretManagerSdkVersion}"
 }
 
 tasks.withType(JavaCompile) {
