Exclude conflicting dependencies from native fat-JAR

--- a/native/build.gradle
+++ b/native/build.gradle
@@ -40,7 +40,11 @@ dependencies {
     implementation group: 'io.ballerina.stdlib', name: 'time-native', version: "${stdlibTimeVersion}"
     implementation group: 'software.amazon.awssdk', name: 'secretsmanager', version: "${awsSecretManagerSdkVersion}"
 
-    dist group: 'software.amazon.awssdk', name: 'secretsmanager', version: "${awsSecretManagerSdkVersion}"
+    dist (group: 'software.amazon.awssdk', name: 'secretsmanager', version: "${awsSecretManagerSdkVersion}") {
+        exclude group: "commons-logging", module: "commons-logging"
+        exclude group: "io.netty", module: "netty-buffer"
+        exclude group: "org.slf4j", module: "slf4j-api"
+    }
 }
 
 tasks.withType(JavaCompile) {
