Update Ballerina API to support EC2 IAM role based authentication

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ plugins {
     id "net.researchgate.release"
 }
 
-description = 'Ballerina - AWS Marketplace Entitlement'
+description = 'Ballerina - AWS Secret Manager'
 
 allprojects {
     group = project.group
