--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -2,7 +2,7 @@
 distribution = "2201.10.0"
 org = "ballerinax"
 name = "aws.secretmanager"
-version = "0.1.0"
+version = "0.1.1"
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords = ["AWS", "Secret Manager", "Cloud/Subscriptions"]
@@ -15,8 +15,8 @@ graalvmCompatible = true
 [[platform.java17.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "aws.secretmanager-native"
-version = "0.1.0"
-path = "../native/build/libs/aws.secretmanager-native-0.1.0.jar"
+version = "0.1.1-SNAPSHOT"
+path = "../native/build/libs/aws.secretmanager-native-0.1.1-SNAPSHOT.jar"
 
 [[platform.java17.dependency]]
 groupId = "io.ballerina.stdlib"
