Update package workflows

--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -12,3 +12,5 @@ jobs:
     secrets: inherit
     with:
       repo-name: module-ballerinax-aws.secretmanager
+      additional-build-flags: "-x test"
+      additional-test-flags: "-x test"
