--- a/gradle.properties
+++ b/gradle.properties
@@ -13,4 +13,7 @@ ballerinaGradlePluginVersion=2.3.0
 ballerinaLangVersion=2201.11.0
 
 stdlibTimeVersion=2.6.0
-awsSecretManagerSdkVersion=2.29.36
+awsJavaSdkVersion=2.30.22
+apacheHttpCoreVersion=4.4.16
+apacheHttpClientVersion=4.5.14
+reactiveStreamsVersion=1.0.4
