--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -2,10 +2,10 @@
 distribution = "2201.11.0"
 org = "ballerinax"
 name = "aws.secretmanager"
-version = "0.3.0"
+version = "0.3.1"
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
-keywords = ["AWS", "Secret Manager", "Cloud/Subscriptions"]
+keywords = ["AWS", "Secret Manager", "Cloud/Subscriptions", "Vendor/Amazon", "Area/Security & Identity", "Type/Connector"]
 icon = "icon.png"
 repository = "https://github.com/ballerina-platform/module-ballerinax-aws.secretmanager"
 
@@ -15,8 +15,8 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "aws.secretmanager-native"
-version = "0.3.0"
-path = "../native/build/libs/aws.secretmanager-native-0.3.0.jar"
+version = "0.3.1-SNAPSHOT"
+path = "../native/build/libs/aws.secretmanager-native-0.3.1-SNAPSHOT.jar"
 
 [[platform.java21.dependency]]
 groupId = "io.ballerina.stdlib"
